Fix spacing in skills

--- a/src/components/skill/style.scss
+++ b/src/components/skill/style.scss
@@ -4,4 +4,8 @@
     $margin: $subcolumn-row-spacing,
     $padding: $page-spacing
   );
+
+  h3 {
+    margin-bottom: 0;
+  }
 }
